* Removed thematiques selector in regular post editor * Added admin settings backup * Prevent regular posts to display in thematique pages * Fixed minor bug in club widget * Removed title underline overlapping posts thumbnails

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Description: A child theme for VDN based on Zerif-Lite
 Author: Philippe Sabaty for BSF
 Author URI: https://www.malt.fr/profile/philippesabaty
 Template: zerif-lite
-Version: 1.3 
+Version: 1.5 
 */
 
 .vdn_nonbsf_disclaimer{
@@ -380,4 +380,10 @@ a.vdn_fiche_thumbnail{
 }
 .tribe-events-list .tribe-events-loop .tribe-events-event-image{
     width:150px !important;
+}
+
+article.type-fiche h2.entry-title::before,
+article.type-fiche h2.entry-title::after{
+    content:none !important ;
+    display:none !important;
 }
